--- a/index.html
+++ b/index.html
@@ -5,216 +5,92 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
-    <style>
-        * {
-            padding: 0;
-            margin: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            width: 100%;
-            height: 65vh;
-            background-color: rgb(153, 127, 127);
-            /* background-image: url(https://img.freepik.com/premium-photo/blue-mathematical-plus-symbols-pattern-math-design-elements-background-medical-tech-background_1029469-79145.jpg?size=626&ext=jpg&ga=GA1.1.1980214654.1711614127&semt=ais); */
-        }
-
-        .calculator {
-            width: 24%;
-            height: 72vh;
-            border: 2px solid black;
-            border-radius: 16px;
-            background-color: rgb(0, 0, 0, 0.66);
-            box-shadow: inset;
-            margin-top: 8%;
-            margin-left: 40%;
-        }
-
-        .calculator h3 {
-            font-size: 25px;
-            color: rgb(158, 151, 151);
-            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-            margin: 5px 0px 0px 9px;
-        }
-
-        input {
-            width: 270px;
-            padding: 12px;
-            /* padding: 4px 10px 4px 0px; */
-            margin: 8px 8px;
-            background-color: rgba(255, 255, 255, 0.60);
-            text-align: right;
-            border-radius: 8px;
-            font-size: 30px;
-            font-weight: 500;
-            /* font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; */
-            /* box-shadow: inset 0px 0px 8px rgba(0, 0, 0, 0.49);
-            text-shadow: 0px 1px 5px rgba(0, 0, 0, 0.38); */
-        }
-
-        input::placeholder {
-            color: black;
-        }
-
-        button {
-            width: 52px;
-            height: 50px;
-            /* padding: 6px 16px; */
-            margin: 5px;
-            margin-left: 11px;
-            font-size: 22px;
-            background-color: black;
-            color: white;
-            border-radius: 10px;
-            cursor: pointer;
-        }
-
-        .equal {
-            color: white;
-            background-color: darkorchid;
-        }
-
-        .AC,
-        .DEL {
-            font-size: 18px;
-        }
-
-        button:hover {
-            color: white;
-            background-color: rgb(114, 48, 48);
-        }
-
-        /* Media Queries */
-
-        @media (max-width: 320px) {
-            .calculator {
-                width: 63%;
-                height: 60vh;
-                border: 2px solid black;
-                border-radius: 16px;
-                background-color: rgb(0, 0, 0, 0.66);
-                box-shadow: inset;
-                margin-top: 32%;
-                margin-left: 16%;
-            }
-
-            .calculator h3 {
-                font-size: 15px;
-                color: rgb(158, 151, 151);
-                font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-                margin: 5px 0px 0px 9px;
-            }
-
-            input {
-                width: 175px;
-                padding: 6px;
-                /* padding: 4px 10px 4px 0px; */
-                margin: 8px 8px;
-                background-color: rgba(255, 255, 255, 0.60);
-                text-align: right;
-                border-radius: 8px;
-                font-size: 15px;
-                font-weight: 500;
-                /* font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; */
-                /* box-shadow: inset 0px 0px 8px rgba(0, 0, 0, 0.49);
-            text-shadow: 0px 1px 5px rgba(0, 0, 0, 0.38); */
-            }
-
-            input::placeholder {
-                color: black;
-            }
-
-            button {
-                width: 33px;
-                height: 33px;
-                /* padding: 6px 16px; */
-                margin-top: 6px;
-                margin-left: 6px;
-                font-size: 12px;
-                background-color: black;
-                color: white;
-                border-radius: 10px;
-                cursor: pointer;
-            }
-
-            .equal {
-                color: white;
-                background-color: darkorchid;
-            }
-
-            .AC,
-            .DEL {
-                font-size: 10px;
-            }
-
-            button:hover {
-                color: white;
-                background-color: rgb(114, 48, 48);
-            }
-
-
-        }
-    </style>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div class="calculator">
-        <h3>Calculator</h3>
-        <input type="text" placeholder="0" id="display">
-        <div>
-            <button class="AC" onclick="removeNum()">AC</button>
-            <button class="DEL" onclick="deleteLastChar()">DEL</button>
-            <button onclick="addNum('%')">%</button>
-            <button onclick="addNum('/')">/</button>
-        </div>
-
-        <div>
-            <button onclick="addNum('7')">7</button>
-            <button onclick="addNum('8')">8</button>
-            <button onclick="addNum('9')">9</button>
-            <button onclick="addNum('*')">X</button>
-        </div>
-
-        <div>
-            <button onclick="addNum('4')">4</button>
-            <button onclick="addNum('5')">5</button>
-            <button onclick="addNum('6')">6</button>
-            <button onclick="addNum('-')">-</button>
-        </div>
-
-        <div>
-            <button onclick="addNum('1')">1</button>
-            <button onclick="addNum('2')">2</button>
-            <button onclick="addNum('3')">3</button>
-            <button onclick="addNum('+')">+</button>
-        </div>
-
-        <div>
-            <button onclick="addNum('00')">00</button>
-            <button onclick="addNum('0')">0</button>
-            <button onclick="addNum('.')">.</button>
-            <button onclick="calculate()" class="equal">=</button>
+    <div class="container">
+        <div class="calculator">
+            <h3>Calculator</h3>
+            <input type="text" placeholder="0" id="display">
+            <div class="row">
+                <div class="col-3">
+                    <button class="AC" onclick="removeNum()">AC</button>
+                </div>
+                <div class="col-3">
+                    <button class="DEL" onclick="dellLastNum()">DEL</button>
+                </div>
+                <div class="col-3">
+                    <button onclick="addNum('%')">%</button>
+                </div>
+                <div class="col-3">
+                    <button onclick="addNum('/')">/</button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-3">
+                    <button onclick="addNum('7')">7</button>
+                </div>
+                <div class="col-3">
+                    <button onclick="addNum('8')">8</button>
+                </div>
+                <div class="col-3">
+                    <button onclick="addNum('9')">9</button>
+                </div>
+                <div class="col-3">
+                    <button onclick="addNum('*')">X</button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-3">
+                    <button onclick="addNum('4')">4</button>
+                </div>
+                <div class="col-3">
+                    <button onclick="addNum('5')">5</button>
+                </div>
+                <div class="col-3">
+                    <button onclick="addNum('6')">6</button>
+                </div>
+                <div class="col-3">
+                    <button onclick="addNum('-')">-</button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-3">
+                    <button onclick="addNum('1')">1</button>
+                </div>
+                <div class="col-3">
+                    <button onclick="addNum('2')">2</button>
+                </div>
+                <div class="col-3">
+                    <button onclick="addNum('3')">3</button>
+                </div>
+                <div class="col-3">
+                    <button onclick="addNum('+')">+</button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-3">
+                    <button onclick="addNum('00')">00</button>
+                </div>
+                <div class="col-3">
+                    <button onclick="addNum('0')">0</button>
+                </div>
+                <div class="col-3">
+                    <button onclick="addNum('.')">.</button>
+                </div>
+                <div class="col-3">
+                    <button onclick="calculate()" class="equal">=</button>
+                </div>
+            </div>
         </div>
     </div>
-    <script>
-        function removeNum() {
-            document.getElementById('display').value = '';
-        }
 
-        function deleteLastChar() {
-        let result = document.getElementById('display').value;
-        document.getElementById('display').value = result.slice(0, -1);
-    }
-
-        function addNum(value) {
-            document.getElementById('display').value += value;
-        }
-
-        function calculate() {
-            var result = eval(document.getElementById('display').value);
-            document.getElementById('display').value = result;
-        }
-    </script>
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
